objects/VPPSR_Change_History__c.object
<CustomObject>
    <fields>
        <fullName>Result_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Result Detail</label>
        <referenceTo>VPPSR_Result_Detail__c</referenceTo>
        <relationshipName>Change_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>change_Number__c</fullName>
        <label>change Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>change_Type__c</fullName>
        <label>change Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>registration_Change_Time__c</fullName>
        <label>registration Change Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSR Change History</label>
    <nameField>
        <displayFormat>VCH-{0000000}</displayFormat>
        <label>Change History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VPPSR Change History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>